# libsignal-dezire

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  audit.md  libsignal-dezire.h
src/: hashes.rs  lib.rs  ratchet.rs  ratchet.rs.old  utils.rs  vxeddsa.rs  x3dh.rs
src/ffi/: mod.rs  ratchet.rs  utils.rs  vxeddsa.rs  x3dh.rs
tests/: e2e_x3dh_ratchet.rs  ffi_ratchet_test.rs  ratchet_test.rs  vxeddsa_test.rs  x3dh_test.rs
