[package]
name = "libsignal-dezire"
version = "0.1.0"
edition = "2024"
repository= "https://github.com/debarkamondal/libsignal-dezire"
license= "MIT"
description = "A rust implementation of VXEdDSA by signal"

[dependencies]
curve25519-dalek = {version ="4.1.3", features = ["digest"] }
rand_core = {version = "0.6.4", features=[ "getrandom" ]}
sha2 = "0.10.9"
subtle = "2.6.1"
x25519-dalek = {version= "2.0.1", features = ["static_secrets"]}


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
