[package]
name = "libsignal-dezire"
version = "0.1.141"
edition = "2024"
repository= "https://github.com/debarkamondal/libsignal-dezire"
license= "AGPL-3.0-only"
description = "A rust implementation of VXEdDSA by signal"

[dependencies]
curve25519-dalek = {version ="4.1.3", features = ["digest"] }
rand_core = {version = "0.6.4", features=[ "getrandom" ]}
sha2 = "0.10.9"
subtle = "2.6.1"
x25519-dalek = {version= "2.0.1", features = ["static_secrets"]}
jni= "0.21.1"
hkdf = "0.12.4"
zeroize = { version = "1.6", features = ["zeroize_derive"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
